# servum

./: .rustfmt.toml  Cargo.toml  README.md  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml  release.yml
cargo_servum/: all.html  fn.main.html  index.html
example/: index.html
example/pages/: about.html
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  (+2 more)
servum/: all.html  index.html  sidebar-items.js
servum/cli/: index.html  sidebar-items.js  struct.Config.html
servum/files/: index.html  sidebar-items.js
servum/http/: enum.HTTPRequestError.html  fn.handle_connection.html  fn.html_doc.html  index.html  sidebar-items.js  struct.HTTPRequest.html  struct.HTTPResponse.html  struct.HTTPStatus.html
servum/multiprocessing/: enum.Message.html  index.html  sidebar-items.js  struct.ThreadPool.html  struct.Worker.html
servum/threadpool/: enum.Message.html  index.html  struct.ThreadPool.html  struct.Worker.html
src/: cli.rs  files.rs  http.rs  lib.rs  threadpool.rs
src/cargo_servum/: main.rs.html
src/cli/: cli.rs  config.rs  err.rs  tui.rs
src/files/: file.rs  mime.rs  path.rs
src/http/: handler.rs  html.rs  request.rs  request_err.rs  response.rs  status.rs
src/multiprocessing/: threadpool.rs  worker.rs
src/servum/: cli.rs.html  files.rs.html  http.rs.html  lib.rs.html  multiprocessing.rs.html  threadpool.rs.html
src/threadpool/: message.rs  threadpool.rs  worker.rs
(+86 files in other folders)
