[package]
name = "servum"
version = "1.0.1"
authors = ["Ulysse McConnell <ulysse.mcconnell+dev@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "servum"
path = "src/bin/main.rs"

[[bin]]
name = "cargo-servum"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
